--- a/test.html
+++ b/test.html
@@ -1,10 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-
 		<!-- Webpage Title -->
-    <title>Hello, world!</title>
-
+    <title>Bye, world!</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
